--- a/mapping/natural-disasters/index.html
+++ b/mapping/natural-disasters/index.html
@@ -13,13 +13,40 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
+    <!-- Meta tags -->
+
+    <!-- HTML Meta Tags -->
+    <title>Natural disasters in India</title>
+    <meta name="description" content="A map of natural disasters in India, with data from NASA">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://areenaarora.com/mapping/natural-disasters/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Natural disasters in India">
+    <meta property="og:description" content="A map of natural disasters in India, with data from NASA">
+    <meta property="og:image" content="www.areenaarora.com/mapping/natural-disasters/disasters-map.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="areenaarora.com">
+    <meta property="twitter:url" content="https://areenaarora.com/mapping/natural-disasters/">
+    <meta name="twitter:title" content="Natural disasters in India">
+    <meta name="twitter:description" content="A map of natural disasters in India, with data from NASA">
+    <meta name="twitter:image" content="www.areenaarora.com/mapping/natural-disasters/disasters-map.png">
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
+    <!--  -->
     <title>Natural disasters in India</title>
 </head>
 
 <body>
     <div class="center-content">
         <h1>Mapping natural disasters in India</h1>
-        <p>For this mapping exercise, I used geocoded disasters data from <a href="https://sedac.ciesin.columbia.edu/data/set/pend-gdis-1960-2018/data-download" target="_blank"><span style="color:#ea624e;">NASA's Socioeconomic Data and Applications Center</span></a></p>
+        <p>For this mapping exercise, I used geocoded disasters data from <a
+                href="https://sedac.ciesin.columbia.edu/data/set/pend-gdis-1960-2018/data-download"
+                target="_blank"><span style="color:#ea624e;">NASA's Socioeconomic Data and Applications
+                    Center</span></a></p>
 
         <div id="disaster-legend" class="legend2">
             <h4>Natural Disasters by Type</h4>
@@ -35,7 +62,9 @@
     </div>
     <div id="map"></div>
     <div class="center-content">
-        <p>I have no way of knowing how complete this dataset is. For my analyses, I used a global dataset and sliced it just to keep natural disasters specific to India. At a glance, draughts are the most common disaster in India.</p>
-        </div>
+        <p>I have no way of knowing how complete this dataset is. For my analyses, I used a global dataset and sliced it
+            just to keep natural disasters specific to India. At a glance, draughts are the most common disaster in
+            India.</p>
+    </div>
     <script type='text/javascript' src="map.js"></script>
 </body>
