--- a/mapping/index.html
+++ b/mapping/index.html
@@ -75,15 +75,15 @@
             <div class="each-card">
                 <a href="/mapping/natural-disasters/" target="_blank">
                     <p class="card-headline">WEB-MAPPING: Natural disasters</p>
-                    <img src="./election-map/map-image.png" alt="Map" style="width:100%">
-                    <p class="card-description">I made two election maps using Mapbox!</p>
+                    <img src="./natural-disasters/disasters-map.png" alt="Map" style="width:100%">
+                    <p class="card-description">A map of natural disasters in India</p>
                 </a>
             </div>
             <div class="each-card">
                 <a href="/mapping/election-map/" target="_blank">
                     <p class="card-headline">WEB-MAPPING: Election results</p>
                     <img src="./election-map/map-image.png" alt="Map" style="width:100%">
-                    <p class="card-description">I made two election maps using Mapbox!</p>
+                    <p class="card-description">I made two election maps using Mapbox</p>
                 </a>
             </div>
             <div class="each-card">
