--- a/mapping/natural-disasters/index.html
+++ b/mapping/natural-disasters/index.html
@@ -63,8 +63,7 @@
     <div id="map"></div>
     <div class="center-content">
         <p>I have no way of knowing how complete this dataset is. For my analyses, I used a global dataset and sliced it
-            just to keep natural disasters specific to India. At a glance, draughts are the most common disaster in
-            India.</p>
+            just to keep natural disasters specific to India. At a glance, draughts are the most common disaster, followed by floods, which is consistent with common knowledge.</p>
     </div>
     <script type='text/javascript' src="map.js"></script>
 </body>
