--- a/mapping/natural-disasters/index.html
+++ b/mapping/natural-disasters/index.html
@@ -64,6 +64,7 @@
     <div class="center-content">
         <p>I have no way of knowing how complete this dataset is. For my analyses, I used a global dataset and sliced it
             just to keep natural disasters specific to India. At a glance, draughts are the most common disaster, followed by floods, which is consistent with common knowledge.</p>
+            <p>The dataset includes natural disasters from 1960 to 2018. For future mapping assignments, for a dataset like this, I'd like to be able to show the magnitude of destruction from these disasters too.</p>
     </div>
     <script type='text/javascript' src="map.js"></script>
 </body>
