--- a/mapping/citibikes/index.html
+++ b/mapping/citibikes/index.html
@@ -56,8 +56,16 @@
         </p>
     </div>
     <div class="maps-container">
-        <div id='map2020'></div>
-        <div id='map2021'></div>
+        <div id='map2020'>
+            <div class="title">
+                <p>Trip starts in September 2020</p>
+            </div>
+        </div>
+        <div id='map2021'>
+            <div class="title">
+                <p>Trip starts in September 2021</p>
+            </div>
+        </div>
     </div>
     <div class="center-content">
         <p>These next two maps show stations where trips ended, for the same two months. Like the previous two maps,
@@ -65,8 +73,16 @@
     </div>
     <br>
     <div class="maps-container">
-        <div id='stops2020'></div>
-        <div id='stops2021'></div>
+        <div id='stops2020'>
+            <div class="title">
+                <p>Trip stops in September 2020</p>
+            </div>
+        </div>
+        <div id='stops2021'>
+            <div class="title">
+                <p>Trip stops in September 2020</p>
+            </div>
+        </div>
     </div>
     <div class="center-content">
         <p>In both 2020 and 2021, W 21 St & 6 Ave was the station with the most activity — in terms of both the number
