--- a/mapping/natural-disasters/index.html
+++ b/mapping/natural-disasters/index.html
@@ -61,9 +61,11 @@
     </div>
     <div id="map"></div>
     <div class="center-content">
-        <p>I have no way of knowing how complete this dataset is. For my analyses, I used a global dataset and sliced it
-            just to keep natural disasters specific to India. At a glance, draughts are the most common disaster, followed by floods, which is consistent with common knowledge.</p>
+        <p>I have no way of knowing how complete this dataset is— especially for Arunachal Pradesh and Jammu and Kashmir. For my analyses, I used a global dataset and sliced it
+            just to keep natural disasters specific to India. At a glance, floods are the most common disaster, followed by droughts, which is consistent with common knowledge.</p>
             <p>The dataset includes natural disasters from 1960 to 2018. For future mapping assignments, for a dataset like this, I'd like to be able to show the magnitude of destruction from these disasters too.</p>
+            <h3>Challenge</h3>
+            
     </div>
     <script type='text/javascript' src="map.js"></script>
 </body>
