--- a/mapping/natural-disasters/index.html
+++ b/mapping/natural-disasters/index.html
@@ -64,7 +64,7 @@
         <p>I have no way of knowing how complete this dataset is— especially for Arunachal Pradesh and Jammu and Kashmir. For my analyses, I used a global dataset and sliced it
             just to keep natural disasters specific to India. At a glance, floods are the most common disaster, followed by droughts, which is consistent with common knowledge.</p>
             <p>The dataset includes natural disasters from 1960 to 2018. For future mapping assignments, for a dataset like this, I'd like to be able to show the magnitude of destruction from these disasters too.</p>
-            <h2><span style="color:#ea624e;">Challenge</span></h2>
+            <h2><span style="color:#ea624e; align-items: center;">Challenge</span></h2>
 
     </div>
     <script type='text/javascript' src="map.js"></script>
