--- a/mapping/index.html
+++ b/mapping/index.html
@@ -66,7 +66,7 @@
         </a>
         <a href="../about/">
             <p>
-                <span style="font-weight:bolder; font-size: 28px; color: white;"> HOME </span>
+                <span style="font-weight:bolder; font-size: 28px; color: white;"> ABOUT </span>
             </p>
         </a>
     </nav>
