--- a/mapping/index.html
+++ b/mapping/index.html
@@ -57,20 +57,19 @@
 </head>
 
 <body>
-
-    <nav>
-        <a href="../">
-            <p>
-                <span style="font-weight:bolder; font-size: 28px; color: white;"> HOME </span>
-            </p>
-        </a>
-        <a href="../about/">
-            <p>
-                <span style="font-weight:bolder; font-size: 28px; color: white;"> ABOUT </span>
-            </p>
-        </a>
-    </nav>
-    <div class="center-content">
+    <div class="center-content-index">
+        <nav>
+            <a href="../">
+                <p>
+                    <span style="font-weight:bolder; font-size: 28px; color: white;"> HOME </span>
+                </p>
+            </a>
+            <a href="../about/">
+                <p>
+                    <span style="font-weight:bolder; font-size: 28px; color: white;"> ABOUT </span>
+                </p>
+            </a>
+        </nav>
         <h1>Welcome to my mapping adventures!🚀🗺</h1>
 
         <p>On this page, I'll be cataloging all my mapping class assignments over the summer. I'm interested in doing
