--- a/about/index.html
+++ b/about/index.html
@@ -41,7 +41,7 @@
 </head>
 
 <body>
-    <div class="aboutme-div">
+    <div class="center-content-index">
         <nav>
             <a href="../">
                 <p>
@@ -53,8 +53,8 @@
         <div class="center-content">
             <img src="../Areena-Arora.jpg" class="responsive-img" alt="Areena's not so professional headshot" />
             <h3>I'm interested in covering <mark> <span style="background-color:#ddff00">climate
-                        justice</span></mark>, <mark> <span
-                        style="background-color:#126ebf; color:aliceblue">waste management</span></mark> and policy
+                        justice</span></mark>, <mark> <span style="background-color:#126ebf; color:aliceblue">waste
+                        management</span></mark> and policy
                 using <mark><span style="background-color:#C1004A; color:#FCF8EB;">data</span></mark>. I've worked
                 as a city government reporter for a <a href="https://www.idahopress.com/" target="_blank"><span
                         style="color:#1cb117"> local newspaper in Idaho,</span></a> for <a
