--- a/mapping/index.html
+++ b/mapping/index.html
@@ -70,7 +70,7 @@
                 </p>
             </a>
         </nav>
-        <h1>Learning how to map the 🌎🗺</h1>
+        <h1>Learning how to map :) 🗺</h1>
 
         <p>On this page, I'll be cataloging all my mapping class assignments over the summer. I'm interested in doing
             local stories on climate crisis, infrastructure related issues and more!</p>
