Back to white bg

--- a/mapping/index.html
+++ b/mapping/index.html
@@ -61,12 +61,12 @@
         <nav>
             <a href="../">
                 <p>
-                    <span style="font-weight:bolder; font-size: 28px; color: white;"> HOME </span>
+                    <span style="font-size: 28px;"> HOME </span>
                 </p>
             </a>
             <a href="../about/">
                 <p>
-                    <span style="font-weight:bolder; font-size: 28px; color: white;"> ABOUT </span>
+                    <span style="font-size: 28px"> ABOUT </span>
                 </p>
             </a>
         </nav>
