Added map descriptions

--- a/mapping/index.html
+++ b/mapping/index.html
@@ -81,28 +81,28 @@
                 <a href="/mapping/natural-disasters/" target="_blank">
                     <p class="card-headline">WEB-MAPPING: Natural disasters</p>
                     <img src="./natural-disasters/disasters-map.png" alt="Map" style="width:100%">
-                    <p class="card-description">A map of natural disasters in India</p>
+                    <p class="card-description">A map of natural disasters in India. Find out why I struggled to make India look like ... India.</p>
                 </a>
             </div>
             <div class="each-card">
                 <a href="/mapping/election-map/" target="_blank">
                     <p class="card-headline">WEB-MAPPING: Election results</p>
                     <img src="./election-map/map-image.png" alt="Map" style="width:100%">
-                    <p class="card-description">I made two election maps using Mapbox</p>
+                    <p class="card-description">Two election maps, two different styles displaying the same dataset using Mapbox</p>
                 </a>
             </div>
             <div class="each-card">
                 <a href="/mapping/counties-typology/" target="_blank">
                     <p class="card-headline">WEB-MAPPING: Dominant industries</p>
                     <img src="./counties-typology/map-typology.png" alt="Map" style="width:100%">
-                    <p class="card-description">A map on each state's most dominant industry</p>
+                    <p class="card-description">A map on each US state's most dominant industry. The dataset is a bit dated (from 2015), but doing this exercise, I learned the importance of when to and when not to group data points👀</p>
                 </a>
             </div>
             <div class="each-card">
                 <a href="/mapping/citibikes/" target="_blank">
                     <p class="card-headline">WEB-MAPPING: Citi Bikes data</p>
                     <img src="./citibikes/map-image.png" alt="Map" style="width:100%">
-                    <p class="card-description">Four interactive maps showing data from Citi Bikes</p>
+                    <p class="card-description">Four interactive maps showing data from Citi Bikes on their ridership in New York City.</p>
                 </a>
             </div>
         </div>
