--- a/mapping/index.html
+++ b/mapping/index.html
@@ -70,8 +70,8 @@
                 </p>
             </a>
         </nav>
-        <br><br>
-        <h1>Learning how to map :) 🗺</h1>
+        <br><br><br><br>
+        <h1>Learning how to map 🗺</h1>
 
         <p>On this page, I'll be cataloging all my mapping class assignments over the summer. I'm interested in doing
             local stories on climate crisis, infrastructure related issues and more!</p>
@@ -102,7 +102,7 @@
                 <a href="/mapping/citibikes/" target="_blank">
                     <p class="card-headline">WEB-MAPPING: Citi Bikes data</p>
                     <img src="./citibikes/map-image.png" alt="Map" style="width:100%">
-                    <p class="card-description">Four interactive maps showing data from Citi Bikes on their ridership in New York City.</p>
+                    <p class="card-description">Four interactive maps showing data from Citi Bikes on their ridership in New York City. </p>
                 </a>
             </div>
         </div>
