--- a/about/index.html
+++ b/about/index.html
@@ -45,7 +45,7 @@
         <nav>
             <a href="../">
                 <p>
-                    <span style="font-weight:bolder; font-size: 28px;"> HOME </span>
+                    <span style="font-weight:bolder; font-size: 28px; background-color: beige;"> HOME </span>
                 </p>
             </a>
         </nav>
