--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <nav>
             <a href="/about/">
                 <p>
-                    <span style="font-weight:bolder; font-size: 28px">ABOUT</span>
+                    <span style="font-weight:bolder; font-size: 28px; background-color: beige;">ABOUT</span>
                 </p>
             </a>
         </nav>
