--- a/mapping/index.html
+++ b/mapping/index.html
@@ -79,28 +79,28 @@
         <div class="cards-wrapper">
             <div class="each-card">
                 <a href="/mapping/natural-disasters/" target="_blank">
-                    <p class="card-headline">Natural disasters</p>
+                    <p class="card-headline">NATURAL DISASTERS</p>
                     <img src="./natural-disasters/disasters-map.png" alt="Map" style="width:100%">
                     <p class="card-description">A map of natural disasters in India. Find out why I struggled to make India look like ... India.</p>
                 </a>
             </div>
             <div class="each-card">
                 <a href="/mapping/election-map/" target="_blank">
-                    <p class="card-headline">Election results</p>
+                    <p class="card-headline">ELECTION RESULTS</p>
                     <img src="./election-map/map-image.png" alt="Map" style="width:100%">
                     <p class="card-description">Two election maps, two different styles displaying the same dataset using Mapbox</p>
                 </a>
             </div>
             <div class="each-card">
                 <a href="/mapping/counties-typology/" target="_blank">
-                    <p class="card-headline">Dominant industries</p>
+                    <p class="card-headline">DOMINANT INDUSTRIES</p>
                     <img src="./counties-typology/map-typology.png" alt="Map" style="width:100%">
                     <p class="card-description">A map on each US state's most dominant industry. The dataset is a bit dated (from 2015), but doing this exercise, I learned the importance of when to and when not to group data points👀</p>
                 </a>
             </div>
             <div class="each-card">
                 <a href="/mapping/citibikes/" target="_blank">
-                    <p class="card-headline">Citi Bikes data</p>
+                    <p class="card-headline">CITI BIKES DATA</p>
                     <img src="./citibikes/map-image.png" alt="Map" style="width:100%">
                     <p class="card-description">Four interactive maps showing data from Citi Bikes on their ridership in New York City. </p>
                 </a>
