--- a/mapping/forest-cover/index.html
+++ b/mapping/forest-cover/index.html
@@ -4,14 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.css' rel='stylesheet' />
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../../stylesheets/stylesheet.css">
+    <link rel="icon" type="image/x-icon" href="../../favicon.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
     <title>Forest cover</title>
 </head>
 
 <body>
+    <div class="center-content">
+        <h1>The world hasn't gotten much green since 1990</h1>
+    </div>
     <div id='map-1990'></div>
     <div id='map-2020'></div>
     <script type='text/javascript' src="map.js"></script>
