--- a/mapping/forest-cover/index.html
+++ b/mapping/forest-cover/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <div class="center-content">
-        <h1>The world hasn't gotten much green since 1990</h1>
+        <h1>The world hasn't gotten much greener since 1990</h1>
     </div>
     <div id='map-1990'></div>
     <div id='map-2020'></div>
