--- a/mapping/index.html
+++ b/mapping/index.html
@@ -78,6 +78,13 @@
         <p>Here's my first couple of maps!</p>
         <div class="cards-wrapper">
             <div class="each-card">
+                <a href="/mapping/forest-cover/" target="_blank">
+                    <p class="card-headline">GREENERY IN THE WORLD</p>
+                    <img src="./natural-disasters/disasters-map.png" alt="Map" style="width:100%">
+                    <p class="card-description">Mapping how forest cover in the world has changed [or not] since 1990.</p>
+                </a>
+            </div>
+            <div class="each-card">
                 <a href="/mapping/natural-disasters/" target="_blank">
                     <p class="card-headline">NATURAL DISASTERS</p>
                     <img src="./natural-disasters/disasters-map.png" alt="Map" style="width:100%">
