Cover image to card

--- a/mapping/index.html
+++ b/mapping/index.html
@@ -80,7 +80,7 @@
             <div class="each-card">
                 <a href="/mapping/forest-cover/" target="_blank">
                     <p class="card-headline">GREENERY IN THE WORLD</p>
-                    <img src="./natural-disasters/disasters-map.png" alt="Map" style="width:100%">
+                    <img src="./forest-cover/cover-forest.jpg" alt="Map" style="width:100%">
                     <p class="card-description">Mapping how forest cover in the world has changed [or not] since 1990.</p>
                 </a>
             </div>
