--- a/mapping/forest-cover/index.html
+++ b/mapping/forest-cover/index.html
@@ -18,8 +18,10 @@
 </head>
 
 <body>
+    <img src="cover.jpg" class="hero-image" alt="Generic image of a forest">
+    <h1 class="text-on-image">The world hasn't gotten much greener since 1990</h1>
     <div class="center-content">
-        <h1>The world hasn't gotten much greener since 1990</h1>
+        
     </div>
     <div id='map-1990'></div>
     <div id='map-2020'></div>
