--- a/mapping/forest-cover/index.html
+++ b/mapping/forest-cover/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <img src="cover.jpg" class="hero-image" alt="Generic image of a forest">
-    <h1 class="text-on-image">The world hasn't gotten much greener since 1990</h1>
+    <h1 class="text-on-image">Slowly, the world is losing its forests</h1>
     <div class="center-content">
         
     </div>
