--- a/mapping/forest-cover/index.html
+++ b/mapping/forest-cover/index.html
@@ -21,7 +21,7 @@
     <img src="cover.jpg" class="hero-image" alt="Generic image of a forest">
     <h1 class="text-on-image">Slowly, the world is losing its forests</h1>
     <div class="center-content">
-        <p>The global forest cover, according to data from the World Bank has gone down, only slightly though.</p>
+        <p>The global forest cover, according to data from the World Bank has gone down, only slightly though — about 1 percent.</p>
     </div>
     <!-- <div id='map-1990'></div> -->
     <div id='map-2020'></div>
