--- a/mapping/forest-cover/index.html
+++ b/mapping/forest-cover/index.html
@@ -21,9 +21,14 @@
     <img src="cover.jpg" class="hero-image" alt="Generic image of a forest">
     <h1 class="text-on-image">Slowly, the world is losing its forests</h1>
     <div class="center-content">
-        <p>The global forest cover, according to data from the World Bank has gone down, only slightly though — about 1 percent.</p>
+        <p>The global forest cover, according to data from the World Bank has gone down, only slightly though — about 1
+            percent. But, this one percent loss hasn't been evenly spread. Some countries have lost more than others.
+        </p>
     </div>
-    <!-- <div id='map-1990'></div> -->
+    <div id='map-1990'></div>
+    <div class="center-content">
+        <p></p>
+    </div>
     <div id='map-2020'></div>
     <script type='text/javascript' src="map.js"></script>
 </body>
