--- a/mapping/forest-cover/index.html
+++ b/mapping/forest-cover/index.html
@@ -25,9 +25,10 @@
             percent. But, this one percent loss hasn't been evenly spread. Some countries have lost more than others.
         </p>
     </div>
+    <h3>Here's a map showing the spread of forest cover globally in 1990.</h3>
     <div id='map-1990'></div>
     <div class="center-content">
-        <p></p>
+        <h3>Here's a map showing the spread of forest cover globally in 1990.</h3>
     </div>
     <div id='map-2020'></div>
     <script type='text/javascript' src="map.js"></script>
