--- a/mapping/forest-cover/index.html
+++ b/mapping/forest-cover/index.html
@@ -34,6 +34,7 @@
     <div class="center-content">
         <p>Increasing deforestation increases threat on biodiversity. Globally, more than a third of all forest is primary forest, largely untouched by human activity.</p>
         <p>For this project, I used data, last updated May 25, 2022, from the World Bank. To plot it, the data was categorized to group together percentage of land covered by forests.</p>
+        <p>Most of the countries that lost the most amount of forest area  losing the most amount of forest area are Belize, Nicaragua, Indonesia and Paraguay.</p>
     </div>
     <script type='text/javascript' src="map.js"></script>
 </body>
