--- a/mapping/forest-cover/index.html
+++ b/mapping/forest-cover/index.html
@@ -26,11 +26,11 @@
         </p>
         <h3>Here's a map showing the spread of forest cover globally in 1990.</h3>
     </div>
-    <div id='map-1990'></div>
+    <div id='map-2020'></div>
     <div class="center-content">
         <h3>Here's a map showing the spread of forest cover globally in 1990.</h3>
     </div>
-    <div id='map-2020'></div>
+    <!-- <div id='map-2020'></div> -->
     <div class="center-content">
         <p>Increasing deforestation increases threat on biodiversity. Globally, more than a third of all forest is primary forest, largely untouched by human activity.</p>
         <p>For this project, I used data, last updated May 25, 2022, from the World Bank. To plot it, the data was categorized to group together percentage of land covered by forests.</p>
