--- a/mapping/forest-cover/index.html
+++ b/mapping/forest-cover/index.html
@@ -26,13 +26,28 @@
         </p>
         <h3>Here's a map showing the spread of forest cover globally in 1990.</h3>
     </div>
-    <div id='map-1990'></div>
+    <div id='map-1990'>
+        <div class="test-legend">
+            <h3>Disaster types</h3>
+            <div><span style="background-color: #59c3c3;"></span>Storm</div>
+            <div><span style="background-color: #4062bb"></span>Flood</div>
+            <div><span style="background-color: #F12323"></span>Extreme Temperature</div>
+            <div><span style="background-color: #FCC772"></span>Drought</div>
+            <div><span style="background-color: #C16D47"></span>Earthquake</div>
+            <div><span style="background-color: #ebebeb"></span>Landslide</div>
+        </div>
+    </div>
     <div class="center-content">
-        <p>At a quick glance, the below map, showing loss of forests in 2020 looks the same, but in these three decades some countries have lost as much as a quarter of their forest cover.</p>
-        <p>Increasing deforestation increases threat on biodiversity. Globally, more than a third of all forest is primary forest, largely untouched by human activity.</p>
-        <p>For this project, I used data, last updated May 25, 2022, from the World Bank. To plot it, the data was categorized to group together percentage of land covered by forests.</p>
-        <p>Most of the countries that lost the most amount of forest area in South America and Asia. Belize, Nicaragua, Indonesia and Paraguay are among the countries that suffered the most loss.</p>
-        <p>Nicaragua lost the most — about a fourth of its forest cover. The country is home to the second largest tropical rainforest in the Western Hemisphere, after the Amazon.</p>
+        <p>At a quick glance, the below map, showing loss of forests in 2020 looks the same, but in these three decades
+            some countries have lost as much as a quarter of their forest cover.</p>
+        <p>Increasing deforestation increases threat on biodiversity. Globally, more than a third of all forest is
+            primary forest, largely untouched by human activity.</p>
+        <p>For this project, I used data, last updated May 25, 2022, from the World Bank. To plot it, the data was
+            categorized to group together percentage of land covered by forests.</p>
+        <p>Most of the countries that lost the most amount of forest area in South America and Asia. Belize, Nicaragua,
+            Indonesia and Paraguay are among the countries that suffered the most loss.</p>
+        <p>Nicaragua lost the most — about a fourth of its forest cover. The country is home to the second largest
+            tropical rainforest in the Western Hemisphere, after the Amazon.</p>
     </div>
     <script type='text/javascript' src="map.js"></script>
 </body>
