--- a/mapping/forest-cover/index.html
+++ b/mapping/forest-cover/index.html
@@ -29,12 +29,17 @@
     <div id='map-1990'>
         <div class="test-legend">
             <h3>Disaster types</h3>
-            <div><span style="background-color: #59c3c3;"></span>Storm</div>
-            <div><span style="background-color: #4062bb"></span>Flood</div>
-            <div><span style="background-color: #F12323"></span>Extreme Temperature</div>
-            <div><span style="background-color: #FCC772"></span>Drought</div>
-            <div><span style="background-color: #C16D47"></span>Earthquake</div>
-            <div><span style="background-color: #ebebeb"></span>Landslide</div>
+            <div><span style="background-color: #fee391"></span>Less than 1%</div>
+            <div><span style="background-color: #ffffe5;"></span>0-10%</div>
+            <div><span style="background-color: #f7fcb9"></span>10-20%</div>
+            <div><span style="background-color: #d9f0a3"></span>20-30%</div>
+            <div><span style="background-color: #addd8e"></span>30-40%</div>
+            <div><span style="background-color: #78c679"></span>40-50%</div>
+            <div><span style="background-color: #41ab5d"></span>50-60%</div>
+            <div><span style="background-color: #41ab5d"></span>60-70%</div>
+            <div><span style="background-color: #41ab5d"></span>70-80%</div>
+            <div><span style="background-color: #41ab5d"></span>80-90%</div>
+            <div><span style="background-color: #41ab5d"></span>90-100%</div>
         </div>
     </div>
     <div class="center-content">
