--- a/mapping/forest-cover/index.html
+++ b/mapping/forest-cover/index.html
@@ -28,7 +28,8 @@
     </div>
     <div id='map-1990'>
         <div class="test-legend">
-            <h3>Disaster types</h3>
+            <h3>Forest cover as a percentage of the country's total land</h3>
+            <div><span style="background-color: #ffffff"></span>No data found</div>
             <div><span style="background-color: #fee391"></span>Less than 1%</div>
             <div><span style="background-color: #ffffe5;"></span>0-10%</div>
             <div><span style="background-color: #f7fcb9"></span>10-20%</div>
