--- a/mapping/forest-cover/index.html
+++ b/mapping/forest-cover/index.html
@@ -57,6 +57,7 @@
             Indonesia and Paraguay are among the countries that suffered the most loss.</p>
         <p>Nicaragua lost the most — about a fourth of its forest cover. The country is home to the second largest
             tropical rainforest in the Western Hemisphere, after the Amazon.</p>
+            <img src="chart.png">
     </div>
     <script type='text/javascript' src="map.js"></script>
 </body>
