--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             </div>
             <div class="each-card">
                 <a href="https://github.com/areenaarora/ny-spills" target="_blank">
-                    <p class="card-headline">NEW YORK'S HAZARDOUS MATERIAL SPILLS</p>
+                    <p class="card-headline">HAZARDOUS MATERIAL SPILLS</p>
                     <img src="./card-photos/hazard.jpg" alt="Spills generic image" style="width:100%">
                     <p class="card-description">A look at hazardous material spills and their clean up in New York. This
                         project is a work in progress ...</p>
