--- a/mapping/forest-cover/index.html
+++ b/mapping/forest-cover/index.html
@@ -20,7 +20,7 @@
 <body>
     <img src="cover.jpg" class="hero-image" alt="Generic image of a forest">
     <h1 class="text-on-image">Slowly, the world is losing its forests</h1>
-    <h3 class="text-on-image">Some countries are faring worse than others</h3>
+    <p class="text-on-image">Some countries are faring worse than others</p>
     <div class="center-content">
         <p>The global forest cover, according to data from the World Bank has gone down, only slightly though — about 1
             percent. But, this one percent loss hasn't been evenly spread. Some countries have lost more than others.
