--- a/mapping/forest-cover/index.html
+++ b/mapping/forest-cover/index.html
@@ -14,6 +14,30 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
+    <!-- meta tags -->
+
+    <!-- HTML Meta Tags -->
+    <title>Forest cover</title>
+    <meta name="description" content="A look at forest cover change from 1990-2020">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://areenaarora.com/mapping/forest-cover/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Forest cover">
+    <meta property="og:description" content="A look at forest cover change from 1990-2020">
+    <meta property="og:image" content="https://areenaarora.com/mapping/forest-cover/cover-forest.jpg">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="areenaarora.com">
+    <meta property="twitter:url" content="https://areenaarora.com/mapping/forest-cover/">
+    <meta name="twitter:title" content="Forest cover">
+    <meta name="twitter:description" content="A look at forest cover change from 1990-2020">
+    <meta name="twitter:image" content="https://areenaarora.com/mapping/forest-cover/cover-forest.jpg">
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
+    <!--  -->
     <title>Forest cover</title>
 </head>
 
@@ -58,7 +82,7 @@
             Indonesia and Paraguay are among the countries that suffered the most loss.</p>
         <p>Nicaragua lost the most — about a fourth of its forest cover. The country is home to the second largest
             tropical rainforest in the Western Hemisphere, after the Amazon.</p>
-            <img src="chart.png" class="chart">
+        <img src="chart.png" class="chart">
     </div>
     <script type='text/javascript' src="map.js"></script>
 </body>
