--- a/mapping/forest-cover/index.html
+++ b/mapping/forest-cover/index.html
@@ -68,12 +68,13 @@
     </div>
     <div id='map-1990'></div>
     <div class="center-content">
-        <h3>Here's a map showing the spread of forest cover globally in 1990.</h3>
+        <h3>Here's a map showing the spread of forest cover globally in 2020.</h3>
     </div>
     <div id='map-2020'></div>
     <div class="center-content">
         <p>At a quick glance, the below map, showing loss of forests in 2020 looks the same, but in these three decades
             some countries have lost as much as a quarter of their forest cover.</p>
+            <p>Puerto Rico, Vietnam and Bhutan are among countries that gained the most forest cover.</p>
         <p>Increasing deforestation increases threat on biodiversity. Globally, more than a third of all forest is
             primary forest, largely untouched by human activity.</p>
         <p>For this project, I used data, last updated May 25, 2022, from the World Bank. To plot it, the data was
