--- a/mapping/index.html
+++ b/mapping/index.html
@@ -78,6 +78,13 @@
         <p>Here's my first couple of maps!</p>
         <div class="cards-wrapper">
             <div class="each-card">
+                <a href="/mapping/tennessee-fires/" target="_blank">
+                    <p class="card-headline">WILDFIRES IN TENNESSEE</p>
+                    <img src="./tennessee-fires/tn-fires.png" alt="Map" style="width:100%">
+                    <p class="card-description">Mapping forest fires in Tenneessee — work in progress.</p>
+                </a>
+            </div>
+            <div class="each-card">
                 <a href="/mapping/forest-cover/" target="_blank">
                     <p class="card-headline">GREENERY IN THE WORLD</p>
                     <img src="./forest-cover/cover-forest.jpg" alt="Map" style="width:100%">
