--- a/mapping/tennessee-fires/index.html
+++ b/mapping/tennessee-fires/index.html
@@ -20,7 +20,7 @@
 <body>
     <div class="center-content">
         <h1>Examining wildfire risk in Tennessee</h1>
-        <p class="p-para">This project looks at housing units exposed to wildfire in Tennessee.</p>
+        <p class="p-para">This project looks at housing units exposed to wildfire in Tennessee. At a quick glance, it would occur that most of the state's housing units are at risk of wildfire exposure. But, this view combines both units directly and indirectly impacted.</p>
     </div>
     <div id='map'></div>
     <script type='text/javascript' src="map.js"></script>
