--- a/mapping/tennessee-fires/index.html
+++ b/mapping/tennessee-fires/index.html
@@ -23,12 +23,15 @@
         <p class="p-para">This project looks at housing units exposed to wildfire in Tennessee. At a quick glance, it
             would occur that most of the state's housing units are at risk of wildfire exposure. But, this view combines
             both units directly and indirectly exposed.</p>
-        <p class="p-para">Directly exposed housing units are those that are located in an area considered to be covered
-            by flammable wild vegetation, according to the U.S. Department of Agriculture, that maintains the dataset.
-        </p>
-
     </div>
     <div id='map'></div>
+    <div class="center-content">
+        <p class="p-para">Directly exposed housing units are those that are located in an area considered to be covered
+            by flammable wild vegetation, according to the U.S. Department of Agriculture, that maintains the dataset.
+            Indirectly exposed are housing units that are located within a mile of an area that's at least two-miles
+            large and covered by flammable vegitation.
+        </p>
+    </div>
     <script type='text/javascript' src="map.js"></script>
 </body>
 
