--- a/index.html
+++ b/index.html
@@ -72,6 +72,15 @@
         <h2>Here's some of my work</h2>
         <div class="cards-wrapper">
             <div class="each-card">
+                <a href="/mapping/" target="_blank">
+                    <p class="card-headline">LEARNING MAPPING</p>
+                    <img src="./card-photos/map.jpg" alt="Map" style="width:100%">
+                    <p class="card-description">On this page, I'll be cataloging homework from my mapping class over the
+                        summer
+                    </p>
+                </a>
+            </div>
+            <div class="each-card">
                 <a href="/nyc-energy/" target="_blank">
                     <p class="card-headline">NYC'S CLEAN ENERGY DEBATE</p>
                     <img src="./card-photos/power-grid.jpg" alt="Power Grid" style="width:100%">
@@ -84,16 +93,8 @@
                 <a href="/salaries/" target="_blank">
                     <p class="card-headline">ANALYZING NYC PAYROLL</p>
                     <img src="./card-photos/money.jpg" alt="Money" style="width:100%">
-                    <p class="card-description">Between 2017 and 2021, some city employees clocked in more overtime hours than regular hours ...
-                    </p>
-                </a>
-            </div>
-            <div class="each-card">
-                <a href="/mapping/" target="_blank">
-                    <p class="card-headline">LEARNING MAPPING</p>
-                    <img src="./card-photos/map.jpg" alt="Map" style="width:100%">
-                    <p class="card-description">On this page, I'll be cataloging homework from my mapping class over the
-                        summer
+                    <p class="card-description">Between 2017 and 2021, some city employees clocked in more overtime
+                        hours than regular hours ...
                     </p>
                 </a>
             </div>
