--- a/mapping/tennessee-fires/index.html
+++ b/mapping/tennessee-fires/index.html
@@ -32,6 +32,7 @@
             large and covered by flammable vegitation.
         </p>
     </div>
+    <div id="map-second"></div>
     <script type='text/javascript' src="map.js"></script>
 </body>
 
