--- a/mapping/tennessee-fires/index.html
+++ b/mapping/tennessee-fires/index.html
@@ -24,7 +24,10 @@
             would occur that most of the state's housing units are at risk of wildfire exposure. But, this view combines
             both units directly and indirectly exposed.</p>
     </div>
-    <div id='map'></div>
+    <div class="maps-container">
+        <div id='map'></div>
+        <div id="map-second"></div>
+    </div>
     <div class="center-content">
         <p class="p-para">Directly exposed housing units are those that are located in an area considered to be covered
             by flammable wild vegetation, according to the U.S. Department of Agriculture, that maintains the dataset.
@@ -32,7 +35,7 @@
             large and covered by flammable vegitation.
         </p>
     </div>
-    <div id="map-second"></div>
+
     <script type='text/javascript' src="map.js"></script>
 </body>
 
