--- a/mapping/tennessee-fires/index.html
+++ b/mapping/tennessee-fires/index.html
@@ -14,6 +14,29 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
+
+    <!-- Open graph meta tags -->
+    <!-- HTML Meta Tags -->
+    <title>Wildfires in Tennessee</title>
+    <meta name="description" content="">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://areenaarora.com/mapping/tennessee-fires/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Wildfires in Tennessee">
+    <meta property="og:description" content="">
+    <meta property="og:image" content="https://areenaarora.com/mapping/tennessee-fires/tn-fires.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="areenaarora.com">
+    <meta property="twitter:url" content="https://areenaarora.com/mapping/tennessee-fires/">
+    <meta name="twitter:title" content="Wildfires in Tennessee">
+    <meta name="twitter:description" content="">
+    <meta name="twitter:image" content="https://areenaarora.com/mapping/tennessee-fires/tn-fires.png">
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+    <!--  -->
     <title>Wildfires in Tennessee</title>
 </head>
 
