Alright. Here we go. Thesis. Step. One.

--- a/thesis/index.html
+++ b/thesis/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="../stylesheets/stylesheet.css">
-    <link rel="stylesheet" href="uttarakhand-stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="../favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,3 +14,7 @@
     <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
     <title>Thesis</title>
 </head>
+<body>
+    <img src="nyc-cover.jpg" class="hero-image" alt="New York City">
+    <h1 class="text-on-image">New York City’s plan to soak up the rain</h1>
+</body>
